test/langtools/tools/javac/datum/DatumCanNotDeclaredFieldsWithSameName.out
DatumCanNotDeclaredFieldsWithSameName.java:8:27: compiler.err.datum.cant.declare.duplicate.fields
1 error
